[project]
name = "backlog"
version = "0.0.0"
description = "Self-hosted to-do management REST API built with FastAPI and PostgreSQL"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "COM812",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
