[project]
name = "backlog"
version = "0.0.0"
description = "Self-hosted to-do management REST API built with FastAPI and PostgreSQL"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "greenlet>=3.3.2",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "testcontainers>=4.14.2",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
follow_untyped_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",
    "S101",
    "PLR2004",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
